src/query/functions/tests/it/scalars/testdata/geo_h3.txt
error: 
  --> SQL:1:1
  |
1 | h3_to_geo(-1)
  | ^^^^^^^^^^^^^ no overload satisfies `h3_to_geo(Int16)`

has tried possible overloads:
  h3_to_geo(UInt64) :: Tuple(Float64, Float64)            : unable to unify `Int16` with `UInt64`
  h3_to_geo(UInt64 NULL) :: Tuple(Float64, Float64) NULL  : unable to unify `Int16` with `UInt64`



error: 
  --> SQL:1:1
  |
1 | h3_to_geo(0)
  | ^^^^^^^^^^^^ invalid cell index (got Some(0)): invalid index mode while evaluating function `h3_to_geo(0)`



error: 
  --> SQL:1:1
  |
1 | h3_to_geo(1)
  | ^^^^^^^^^^^^ invalid cell index (got Some(1)): invalid index mode while evaluating function `h3_to_geo(1)`



ast            : h3_to_geo(644325524701193974)
raw expr       : h3_to_geo(644325524701193974)
checked expr   : h3_to_geo<UInt64>(644325524701193974_u64)
optimized expr : (37.7950661683_f64, 55.7129024314_f64)
output type    : Tuple(Float64, Float64)
output domain  : ({37.7950661683..=37.7950661683}, {55.7129024314..=55.7129024314})
output         : (37.7950661683, 55.7129024314)


ast            : h3_to_geo(h3)
raw expr       : h3_to_geo(h3::UInt64)
checked expr   : h3_to_geo<UInt64>(h3)
evaluation:
+--------+-------------------------------------------+--------------------------------+
|        | h3                                        | Output                         |
+--------+-------------------------------------------+--------------------------------+
| Type   | UInt64                                    | Tuple(Float64, Float64)        |
| Domain | {644325528491955313..=644325529094369568} | ({-inf..=NaN}, {-inf..=NaN})   |
| Row 0  | 644325529094369568                        | (37.63098017, 55.7792306582)   |
| Row 1  | 644325528627451570                        | (37.6601793867, 55.7632386023) |
| Row 2  | 644325528491955313                        | (37.5981351518, 55.7207584428) |
+--------+-------------------------------------------+--------------------------------+
evaluation (internal):
+--------+-----------------------------------------------------------------------------------------------------------------------+
| Column | Data                                                                                                                  |
+--------+-----------------------------------------------------------------------------------------------------------------------+
| h3     | UInt64([644325529094369568, 644325528627451570, 644325528491955313])                                                  |
| Output | Tuple([Float64([37.63098017, 37.6601793867, 37.5981351518]), Float64([55.7792306582, 55.7632386023, 55.7207584428])]) |
+--------+-----------------------------------------------------------------------------------------------------------------------+


error: 
  --> SQL:1:1
  |
1 | h3_to_geo_boundary(-1)
  | ^^^^^^^^^^^^^^^^^^^^^^ no overload satisfies `h3_to_geo_boundary(Int16)`

has tried possible overloads:
  h3_to_geo_boundary(UInt64) :: Array(Tuple(Float64, Float64))            : unable to unify `Int16` with `UInt64`
  h3_to_geo_boundary(UInt64 NULL) :: Array(Tuple(Float64, Float64)) NULL  : unable to unify `Int16` with `UInt64`



error: 
  --> SQL:1:1
  |
1 | h3_to_geo_boundary(0)
  | ^^^^^^^^^^^^^^^^^^^^^ invalid cell index (got Some(0)): invalid index mode while evaluating function `h3_to_geo_boundary(0)`



error: 
  --> SQL:1:1
  |
1 | h3_to_geo_boundary(1)
  | ^^^^^^^^^^^^^^^^^^^^^ invalid cell index (got Some(1)): invalid index mode while evaluating function `h3_to_geo_boundary(1)`



ast            : h3_to_geo_boundary(644325524701193974)
raw expr       : h3_to_geo_boundary(644325524701193974)
checked expr   : h3_to_geo_boundary<UInt64>(644325524701193974_u64)
optimized expr : [(37.7950581117, 55.7129002253), (37.7950650699, 55.7128971348), (37.7950731265, 55.7128993409), (37.7950742248, 55.7129046375), (37.7950672666, 55.712907728), (37.79505921, 55.7129055219)]
output type    : Array(Tuple(Float64, Float64))
output domain  : [({37.7950581117..=37.7950742248}, {55.7128971348..=55.712907728})]
output         : [(37.7950581117, 55.7129002253), (37.7950650699, 55.7128971348), (37.7950731265, 55.7128993409), (37.7950742248, 55.7129046375), (37.7950672666, 55.712907728), (37.79505921, 55.7129055219)]


ast            : h3_to_geo_boundary(h3)
raw expr       : h3_to_geo_boundary(h3::UInt64)
checked expr   : h3_to_geo_boundary<UInt64>(h3)
evaluation:
+--------+-------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
|        | h3                                        | Output                                                                                                                                                                                           |
+--------+-------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Type   | UInt64                                    | Array(Tuple(Float64, Float64))                                                                                                                                                                   |
| Domain | {644325524701193974..=644325529094369568} | [({-inf..=NaN}, {-inf..=NaN})]                                                                                                                                                                   |
| Row 0  | 644325524701193974                        | [(37.7950581117, 55.7129002253), (37.7950650699, 55.7128971348), (37.7950731265, 55.7128993409), (37.7950742248, 55.7129046375), (37.7950672666, 55.712907728), (37.79505921, 55.7129055219)]    |
| Row 1  | 644325529094369568                        | [(37.6309721202, 55.7792284411), (37.6309790925, 55.7792253644), (37.6309871423, 55.7792275816), (37.6309882199, 55.7792328754), (37.6309812476, 55.7792359521), (37.6309731977, 55.7792337349)] |
| Row 2  | 644325528627451570                        | [(37.6601713365, 55.7632363872), (37.6601783056, 55.763233308), (37.6601863558, 55.763235523), (37.6601874369, 55.7632408174), (37.6601804678, 55.7632438967), (37.6601724176, 55.7632416816)]   |
| Row 3  | 644325528491955313                        | [(37.5981271173, 55.7207562254), (37.5981340803, 55.7207531489), (37.5981421147, 55.7207553663), (37.5981431862, 55.7207606602), (37.5981362232, 55.7207637368), (37.5981281888, 55.7207615194)] |
+--------+-------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
evaluation (internal):
+--------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Column | Data                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+--------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| h3     | UInt64([644325524701193974, 644325529094369568, 644325528627451570, 644325528491955313])                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| Output | ArrayColumn { values: Tuple([Float64([37.7950581117, 37.7950650699, 37.7950731265, 37.7950742248, 37.7950672666, 37.79505921, 37.6309721202, 37.6309790925, 37.6309871423, 37.6309882199, 37.6309812476, 37.6309731977, 37.6601713365, 37.6601783056, 37.6601863558, 37.6601874369, 37.6601804678, 37.6601724176, 37.5981271173, 37.5981340803, 37.5981421147, 37.5981431862, 37.5981362232, 37.5981281888]), Float64([55.7129002253, 55.7128971348, 55.7128993409, 55.7129046375, 55.712907728, 55.7129055219, 55.7792284411, 55.7792253644, 55.7792275816, 55.7792328754, 55.7792359521, 55.7792337349, 55.7632363872, 55.763233308, 55.763235523, 55.7632408174, 55.7632438967, 55.7632416816, 55.7207562254, 55.7207531489, 55.7207553663, 55.7207606602, 55.7207637368, 55.7207615194])]), offsets: [0, 6, 12, 18, 24] } |
+--------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+


error: 
  --> SQL:1:1
  |
1 | h3_k_ring(-1, 1)
  | ^^^^^^^^^^^^^^^^ no overload satisfies `h3_k_ring(Int16, UInt8)`

has tried possible overloads:
  h3_k_ring(UInt64, UInt32) :: Array(UInt64)                 : unable to unify `Int16` with `UInt64`
  h3_k_ring(UInt64 NULL, UInt32 NULL) :: Array(UInt64) NULL  : unable to unify `Int16` with `UInt64`



error: 
  --> SQL:1:1
  |
1 | h3_k_ring(0, 0)
  | ^^^^^^^^^^^^^^^ invalid cell index (got Some(0)): invalid index mode while evaluating function `h3_k_ring(0, 0)`



error: 
  --> SQL:1:1
  |
1 | h3_k_ring(0, -1)
  | ^^^^^^^^^^^^^^^^ no overload satisfies `h3_k_ring(UInt8, Int16)`

has tried possible overloads:
  h3_k_ring(UInt64, UInt32) :: Array(UInt64)                 : unable to unify `Int16` with `UInt32`
  h3_k_ring(UInt64 NULL, UInt32 NULL) :: Array(UInt64) NULL  : unable to unify `Int16` with `UInt32`



error: 
  --> SQL:1:1
  |
1 | h3_k_ring(644325524701193974, -1)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no overload satisfies `h3_k_ring(UInt64, Int16)`

has tried possible overloads:
  h3_k_ring(UInt64, UInt32) :: Array(UInt64)                 : unable to unify `Int16` with `UInt32`
  h3_k_ring(UInt64 NULL, UInt32 NULL) :: Array(UInt64) NULL  : unable to unify `Int16` with `UInt32`



ast            : h3_k_ring(644325524701193974, 0)
raw expr       : h3_k_ring(644325524701193974, 0)
checked expr   : h3_k_ring<UInt64, UInt32>(644325524701193974_u64, to_uint32<UInt8>(0_u8))
optimized expr : [644325524701193974]
output type    : Array(UInt64)
output domain  : [{644325524701193974..=644325524701193974}]
output         : [644325524701193974]


ast            : h3_k_ring(644325524701193974, 1)
raw expr       : h3_k_ring(644325524701193974, 1)
checked expr   : h3_k_ring<UInt64, UInt32>(644325524701193974_u64, to_uint32<UInt8>(1_u8))
optimized expr : [644325524701193897, 644325524701193899, 644325524701193869, 644325524701193970, 644325524701193968, 644325524701193972]
output type    : Array(UInt64)
output domain  : [{644325524701193869..=644325524701193972}]
output         : [644325524701193897, 644325524701193899, 644325524701193869, 644325524701193970, 644325524701193968, 644325524701193972]


ast            : h3_k_ring(644325524701193974, 2)
raw expr       : h3_k_ring(644325524701193974, 2)
checked expr   : h3_k_ring<UInt64, UInt32>(644325524701193974_u64, to_uint32<UInt8>(2_u8))
optimized expr : [644325524701193901, 644325524701193896, 644325524701193898, 644325524701193868, 644325524701193864, 644325524701193865, 644325524701193940, 644325524701193971, 644325524701193969, 644325524701193973, 644325524701193755, 644325524701193754]
output type    : Array(UInt64)
output domain  : [{644325524701193754..=644325524701193973}]
output         : [644325524701193901, 644325524701193896, 644325524701193898, 644325524701193868, 644325524701193864, 644325524701193865, 644325524701193940, 644325524701193971, 644325524701193969, 644325524701193973, 644325524701193755, 644325524701193754]


ast            : h3_k_ring(644325524701193974, 3)
raw expr       : h3_k_ring(644325524701193974, 3)
checked expr   : h3_k_ring<UInt64, UInt32>(644325524701193974_u64, to_uint32<UInt8>(3_u8))
optimized expr : [644325524701193747, 644325524701193900, 644325524701193902, 644325524701193861, 644325524701193857, 644325524701193870, 644325524701193866, 644325524701193867, 644325524701193942, 644325524701193936, 644325524701193941, 644325524701193926, 644325524701193924, 644325524701193954, 644325524701193958, 644325524701193753, 644325524701193752, 644325524701193758]
output type    : Array(UInt64)
output domain  : [{644325524701193747..=644325524701193958}]
output         : [644325524701193747, 644325524701193900, 644325524701193902, 644325524701193861, 644325524701193857, 644325524701193870, 644325524701193866, 644325524701193867, 644325524701193942, 644325524701193936, 644325524701193941, 644325524701193926, 644325524701193924, 644325524701193954, 644325524701193958, 644325524701193753, 644325524701193752, 644325524701193758]


ast            : h3_k_ring(h3, k)
raw expr       : h3_k_ring(h3::UInt64, k::UInt32)
checked expr   : h3_k_ring<UInt64, UInt32>(h3, k)
evaluation:
+--------+-------------------------------------------+---------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
|        | h3                                        | k       | Output                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+--------+-------------------------------------------+---------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Type   | UInt64                                    | UInt32  | Array(UInt64)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| Domain | {644325524701193974..=644325529094369568} | {1..=4} | [{0..=18446744073709551615}]                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| Row 0  | 644325524701193974                        | 1       | [644325524701193897, 644325524701193899, 644325524701193869, 644325524701193970, 644325524701193968, 644325524701193972]                                                                                                                                                                                                                                                                                                                                                                         |
| Row 1  | 644325529094369568                        | 2       | [644325529094371466, 644325529094371481, 644325529094371483, 644325529094369589, 644325529094369585, 644325529094369540, 644325529094369541, 644325529094369582, 644325529094369580, 644325529094371538, 644325529094371542, 644325529094371467]                                                                                                                                                                                                                                                 |
| Row 2  | 644325528627451570                        | 3       | [644325528627460973, 644325528627460968, 644325528627460970, 644325528627460929, 644325528627460942, 644325528627460938, 644325528627460708, 644325528627460709, 644325528627451538, 644325528627451539, 644325528627451537, 644325528627451522, 644325528627451520, 644325528627451524, 644325528627451554, 644325528627451558, 644325528627451803, 644325528627451802]                                                                                                                         |
| Row 3  | 644325528491955313                        | 4       | [644325528491955548, 644325528491955550, 644325528491955245, 644325528491955240, 644325528491955242, 644325528491955212, 644325528491955208, 644325528491955211, 644325528491955429, 644325528491955282, 644325528491955283, 644325528491955294, 644325528491955288, 644325528491955293, 644325528491955278, 644325528491955276, 644325528491955307, 644325528491955304, 644325528491955308, 644325528491954322, 644325528491954326, 644325528491955531, 644325528491955530, 644325528491955549] |
+--------+-------------------------------------------+---------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
evaluation (internal):
+--------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Column | Data                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+--------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| h3     | UInt64([644325524701193974, 644325529094369568, 644325528627451570, 644325528491955313])                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| k      | UInt32([1, 2, 3, 4])                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| Output | ArrayColumn { values: UInt64([644325524701193897, 644325524701193899, 644325524701193869, 644325524701193970, 644325524701193968, 644325524701193972, 644325529094371466, 644325529094371481, 644325529094371483, 644325529094369589, 644325529094369585, 644325529094369540, 644325529094369541, 644325529094369582, 644325529094369580, 644325529094371538, 644325529094371542, 644325529094371467, 644325528627460973, 644325528627460968, 644325528627460970, 644325528627460929, 644325528627460942, 644325528627460938, 644325528627460708, 644325528627460709, 644325528627451538, 644325528627451539, 644325528627451537, 644325528627451522, 644325528627451520, 644325528627451524, 644325528627451554, 644325528627451558, 644325528627451803, 644325528627451802, 644325528491955548, 644325528491955550, 644325528491955245, 644325528491955240, 644325528491955242, 644325528491955212, 644325528491955208, 644325528491955211, 644325528491955429, 644325528491955282, 644325528491955283, 644325528491955294, 644325528491955288, 644325528491955293, 644325528491955278, 644325528491955276, 644325528491955307, 644325528491955304, 644325528491955308, 644325528491954322, 644325528491954326, 644325528491955531, 644325528491955530, 644325528491955549]), offsets: [0, 6, 18, 36, 60] } |
+--------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+


